--- a/latex_proofs.tex
+++ b/latex_proofs.tex
@@ -6,12 +6,16 @@
 \usepackage{latexsym}
 \usepackage{amsmath}
 \usepackage{proof}
+\usepackage{color}
 \usepackage{moreverb}
 \usepackage{array}
+\usepackage{bm}
 \newcommand{\Boxd}{\Box^{\downarrow}}
 \newcommand{\bs}{\backslash}
 \newcommand{\bo}{[}
 \newcommand{\bc}{]}
+
+\definecolor{gray80}{gray}{0.80}
 
 \begin{document}
 
